# aiqso-seo-service

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-audit.yml
alembic/: env.py
app/: celery_app.py  config.py  database.py  logging_config.py  main.py  rate_limit.py  security.py  tasks.py
app/models/: __init__.py  audit.py  audit_log.py  base.py  billing.py  client.py  keyword.py  report.py  website.py  worklog.py
app/routers/: audits.py  billing.py  clients.py  health.py  keywords.py  odoo.py  portal.py  reports.py  websites.py  worklog.py
app/services/: audit_service.py  notification_service.py  odoo_service.py  report_service.py  seo_auditor.py  serpbear_service.py  stripe_service.py
app/templates/: report_default.html
dashboard/: .prettierrc.json  package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/audits/: page.tsx
dashboard/src/app/billing/: page.tsx
dashboard/src/app/issues/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/app/websites/: page.tsx
dashboard/src/app/worklog/: page.tsx
dashboard/src/components/: Layout.tsx  ScoreCard.tsx  StatsCard.tsx
dashboard/src/lib/: api.ts
docs/: api.md  getting-started.md  index.md
services/serpbear/: next.config.js  package-lock.json  package.json  tsconfig.json
services/serpbear/__mocks__/: utils.tsx
services/serpbear/__tests__/pages/: domain.test.tsx  domains.test.tsx
services/serpbear/components/common/: Sidebar.tsx  TopBar.tsx
services/serpbear/components/domains/: AddDomain.tsx  DomainHeader.tsx  DomainSettings.tsx
services/serpbear/mcp_server/: .npmrc  package-lock.json  package.json
services/serpbear/pages/: _app.tsx
services/serpbear/services/: adwords.tsx  domains.tsx  keywords.tsx  misc.tsx  searchConsole.ts  settings.ts
services/serpbear/utils/: verifyUser.ts
src/cli/: main.py
src/core/: __init__.py  auditor.py  tiers.py
tests/: conftest.py  test_audits.py  test_billing.py  test_billing_auth.py  test_health.py  test_security.py
(+13 files in other folders)
