[project]
name = "aiqso-seo-service"
version = "1.0.0"
description = "SEO Auditing & Rank Tracking Service"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "node_modules",
    "dashboard",
    "mcp_server",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E711",   # comparison to None (SQLAlchemy uses this pattern)
    "E712",   # comparison to True/False (SQLAlchemy uses this pattern)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "B904",   # raise without from (sometimes intentional)
    "ARG001", # unused function argument (common in FastAPI)
    "ARG002", # unused method argument (common in FastAPI/abstract methods)
    "SIM102", # nested if statements (sometimes more readable)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "node_modules",
    "dashboard",
    "mcp_server",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app", "src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
